--- a/Activities/WebApp/package.json
+++ b/Activities/WebApp/package.json
@@ -1,45 +1,50 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/swcraftlyon/meetup.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "superagent": "^1.6.1"
   },
   "devDependencies": {
-    "babel-preset-react": "^6.1.18",
-    "eslint-plugin-react": "^3.10.0",
-    "del": "^2.0.2",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-hub": "frankwallis/gulp-hub#registry-init",
-    "gulp-filter": "^3.0.1",
-    "gulp-sass": "^2.1.1",
+    "autoprefixer": "^6.2.2",
     "babel-core": "^6.2.0",
+    "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.2.0",
+    "babel-preset-react": "^6.1.18",
     "browser-sync": "^2.9.11",
+    "css-loader": "^0.23.1",
+    "del": "^2.0.2",
+    "es6-shim": "^0.34.0",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.10.0",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-hub": "frankwallis/gulp-hub#registry-init",
+    "gulp-sass": "^2.1.1",
+    "html-webpack-plugin": "^1.7.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.14",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
-    "jasmine-core": "^2.4.1",
     "karma-junit-reporter": "^0.3.8",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-phantomjs-shim": "^1.1.2",
-    "phantomjs": "^1.9.19",
-    "es6-shim": "^0.34.0",
     "karma-webpack": "^1.7.0",
-    "isparta-instrumenter-loader": "^1.0.0",
-    "webpack": "^1.12.9",
-    "babel-loader": "^6.2.0",
-    "html-webpack-plugin": "^1.7.0",
-    "style-loader": "^0.13.0",
-    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.8.0",
-    "autoprefixer": "^6.2.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
-    "node-sass": "^3.4.2",
-    "eslint": "^1.10.3",
-    "eslint-loader": "^1.1.1"
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "scripts": {
     "build": "gulp",
