--- a/Events/build.gradle
+++ b/Events/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
+    compile 'com.sparkjava:spark-core:2.3'
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.3.0'
 }
