--- a/Events/build.gradle
+++ b/Events/build.gradle
@@ -1,7 +1,18 @@
 group 'com.github.swcraftlyon.meetup'
 version '0.1-SNAPSHOT'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "io.ratpack:ratpack-gradle:1.2.0"
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'io.ratpack.ratpack-java'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
@@ -12,4 +23,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
+
+    runtime 'org.slf4j:slf4j-simple:1.7.12'
 }
+
+mainClassName = 'com.github.swcraftlyon.meetup.Application'
