--- a/Activities/WebApp/package.json
+++ b/Activities/WebApp/package.json
@@ -43,7 +43,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-middleware": "~1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   },
   "scripts": {
