--- a/Events/build.gradle
+++ b/Events/build.gradle
@@ -3,7 +3,6 @@ version '0.1-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -12,4 +11,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    compile 'org.mongodb:mongo-java-driver:3.2.0'
+
+
 }
