--- a/Events/build.gradle
+++ b/Events/build.gradle
@@ -11,9 +11,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+    testCompile group: 'com.github.fakemongo', name: 'fongo', version: '2.0.6'
+    testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
 
-    compile 'org.mongodb:mongo-java-driver:3.2.0'
-
-
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.0'
 }
