--- a/Events/build.gradle
+++ b/Events/build.gradle
@@ -1,15 +1,18 @@
-group 'com.github.swcraftlyon.meetup'
-version '0.1-SNAPSHOT'
+subprojects {
+    group 'com.github.swcraftlyon.meetup'
+    version '0.1-SNAPSHOT'
 
-apply plugin: 'java'
+    apply plugin: 'java'
 
-sourceCompatibility = 1.8
+    sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
+    dependencies {
+        // Common dependencies (nothing specific to an adapter here)
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'org.assertj', name: 'assertj-core', version: '3.3.0'
+    }
 }
